--- a/basic/index.html
+++ b/basic/index.html
@@ -44,23 +44,30 @@
       </nav>
 
       <div class="container">
-          <table class="table table-striped" x-data="service()" x-init="startInterval()">
+          <table class="table table-striped" x-data="service()" x-init="setDispatcher($dispatch)">
               <thead>
                   <tr>
-                      <th>name</th>
-                      <th>email 
-                          <span x-text="show"></span>
-                      </th>
+                      <th>#</th>
+                      <th>First name</th>
+                      <th>Last name</th>
+                      <th>Email</th>
+                      <th>actions</th>
                   </tr>
               </thead>
               <tbody>
-                  <template x-for="user in list" :key="user">
+                  <template x-for="user in list" :key="user.id">
                       <tr>
-                          <td>
-                              <!-- <input type="text" x-bind:value="user.name"> -->
-                              <span x-text="user.name"></span>
-                          </td>
+                          <td x-text="user.id"></td>
+                          <td x-text="user.first_name"></td>
+                          <td x-text="user.last_name"></td>
                           <td x-text="user.email"></td>
+                          <td>
+                              <div class="btn-group">
+                                  <button x-on:click="remove(user.id)" class="btn btn-danger">
+                                      del
+                                  </button>
+                              </div>
+                          </td>
                       </tr>
                   </template>
               </tbody>
